<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="btn_payment">Payment</string>
    <string name="btn_transaction">Transaction</string>
    <string name="btn_refund">Refund</string>
    <string name="btn_redeem">Redeem</string>
    <string name="btn_settings">Settings</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>